--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,6 +2,7 @@ html,body,#app{
     height: 100%;
     padding: 0;
     margin: 0;
+    min-width: 1400px;
 }
 .el-breadcrumb{
     margin-bottom: 20px;
